--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8080
 MONGO_CONN=mongodb+srv://user_cafe:upCTexTf0F6zbno8@cafenodecuster.rgirb.mongodb.net/cafeDB
+SECRETTOKENKEY=ESTO0es1MyPublic2KEY3@.$.
