--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MONGO_CONN=mongodb+srv://user_cafe:upCTexTf0F6zbno8@cafenodecuster.rgirb.mongodb
 SECRETTOKENKEY=ESTO0es1MyPublic2KEY3@.$.
 GOOGLE_CLIENT_ID=429037016276-j68nq67gkh1887glmdgpvfev23ureapi.apps.googleusercontent.com
 GOOGLE_SECRET_ID=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
+CLOUDINARY_URL=cloudinary://796835649938629:EGvG24w_sriPl6jxqtU4TaT8ibw@dfpxpt16m
